# datapilot-harness

./: .env.example  .gitignore  README.md  pyproject.toml
datapilot/: __init__.py  __main__.py  csv_store.py  harness.py  llm.py  prompts.py  schemas.py  sql_validate.py  trace.py
datapilot/api/: __init__.py  main.py
examples/: sales.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AnswerCard.tsx  AppShell.tsx  CsvUpload.tsx  DataSourcePanel.tsx  EmptyState.tsx  ErrorBanner.tsx  HeaderBar.tsx  ProviderBadge.tsx  QuestionBox.tsx  ResultTable.tsx  RunStatusBar.tsx  SamplePrompts.tsx  SchemaTable.tsx  SqlViewer.tsx  TraceDetails.tsx  TraceTimeline.tsx
frontend/src/demo/: staticRun.ts
frontend/src/lib/: api.ts  format.ts
tests/: test_api.py  test_csv_store.py  test_harness_schemas.py  test_harness_session.py  test_mock_llm.py  test_sql_validate.py
